Replace Absolute Links With Relative Ones

--- a/businessiswar/?feed=rss2&cat=2/index.html
+++ b/businessiswar/?feed=rss2&cat=2/index.html
@@ -10,8 +10,8 @@
 
 <channel>
 	<title>Atari Corp. - Business Is War &#187; Blog</title>
-	<atom:link href="http://ataribook.com/book/businessiswar/?feed=rss2&#038;cat=2" rel="self" type="application/rss+xml" />
-	<link>http://ataribook.com/book/businessiswar</link>
+	<atom:link href="/businessiswar/?feed=rss2&#038;cat=2" rel="self" type="application/rss+xml" />
+	<link>/businessiswar</link>
 	<description>Atari Corp. - Business Is War</description>
 	<lastBuildDate>Tue, 08 Jul 2014 14:54:05 +0000</lastBuildDate>
 	<language>en-US</language>
@@ -20,42 +20,42 @@
 	<generator>http://wordpress.org/?v=3.9.11</generator>
 	<item>
 		<title>Atari Inc. &#8211; Business Is War Cover Released</title>
-		<link>http://ataribook.com/book/businessiswar/?p=19</link>
-		<comments>http://ataribook.com/book/businessiswar/?p=19#comments</comments>
+		<link>/businessiswar/?p=19</link>
+		<comments>/businessiswar/?p=19#comments</comments>
 		<pubDate>Wed, 02 Jul 2014 06:01:43 +0000</pubDate>
 		<dc:creator><![CDATA[syzygypress]]></dc:creator>
 				<category><![CDATA[Blog]]></category>
 
 		<guid isPermaLink="false">http://atarihq.com/book/businessiswar/?p=19</guid>
 		<description><![CDATA[<p>New York, New York &#8211; July 2, 2014 &#8212; 1984 was a tumultuous time in the home video game industry. Crashing spectacularly, video game titan Atari Inc. was split up by parent Warner Communications on July 2,1984 with it&#8217;s brand name and half the company sold to Commodore International founder Jack Tramiel. Recently ousted from [&#8230;]</p>
-<p>The post <a rel="nofollow" href="http://ataribook.com/book/businessiswar/?p=19">Atari Inc. &#8211; Business Is War Cover Released</a> appeared first on <a rel="nofollow" href="http://ataribook.com/book/businessiswar">Atari Corp. - Business Is War</a>.</p>
+<p>The post <a rel="nofollow" href="/businessiswar/?p=19">Atari Inc. &#8211; Business Is War Cover Released</a> appeared first on <a rel="nofollow" href="/businessiswar">Atari Corp. - Business Is War</a>.</p>
 ]]></description>
 				<content:encoded><![CDATA[<p>New York, New York &#8211; July 2, 2014 &#8212; 1984 was a tumultuous time in the home video game industry. Crashing spectacularly, video game titan Atari Inc. was split up by parent Warner Communications on July 2,1984 with it&#8217;s brand name and half the company sold to Commodore International founder Jack Tramiel. Recently ousted from his own company, the Auschwitz survivor and computer industry titan (who regularly equated business to war) started over in a hostile landscape and against mass amounts of inherited debt. Atari Corporation was Jack&#8217;s last attempt at recapturing his earlier success while keeping the Atari brand going strong during a time when Nintendo, SEGA, Apple, and PC clones began to dominate video games and home computers.</p>
 <p>The noted video game historian team of Marty Goldberg and Curt Vendel, co-authors of the popular book ‘Atari Inc. – Business is Fun,’ will tell the story of Atari Corporation in their upcoming book &#8216;Atari Corp. &#8211; Business Is War.&#8217; But in honor of the 30th anniversary of Jack&#8217;s founding of Atari Corporation, they&#8217;re releasing the book&#8217;s stunning cover in advance to video game and computer fans alike. Hand painted by artist Lukas Ketner, the cover personifies the company, it&#8217;s products and history.</p>
 <p>“Our intent was to really have a cover that embodies the company at a glance,&#8221; said<br />
 Goldberg. &#8220;The iconic Jack Tramiel and his sons Sam, Leonard and Gary surrounded by the now legendary products they introduced to us. At the same time, the seriousness and competitive business nature Jack and his companies were known for had to be shown. Lukas captured it all perfectly and in a style that anyone who group up with Atari should recognize!&#8221;</p>
 <p>Vendel elaborates, &#8220;Atari Corporation was a completely different company than Atari Inc. Not just in people and products, but in vision, philosophy and presence. Jack&#8217;s masterful resuscitation in the consumer marketplace of a brand that was so close to going off the edge of a cliff is a story that will surprise and awe many. We sought out Lukas because of the skills and expression demonstrated in the Atari 2600 inspired artwork he did for app developer Panic. And we think you&#8217;ll agree he didn&#8217;t disappoint here either!”</p>
-<p>The post <a rel="nofollow" href="http://ataribook.com/book/businessiswar/?p=19">Atari Inc. &#8211; Business Is War Cover Released</a> appeared first on <a rel="nofollow" href="http://ataribook.com/book/businessiswar">Atari Corp. - Business Is War</a>.</p>
+<p>The post <a rel="nofollow" href="/businessiswar/?p=19">Atari Inc. &#8211; Business Is War Cover Released</a> appeared first on <a rel="nofollow" href="/businessiswar">Atari Corp. - Business Is War</a>.</p>
 ]]></content:encoded>
-			<wfw:commentRss>http://ataribook.com/book/businessiswar/?feed=rss2&#038;p=19</wfw:commentRss>
+			<wfw:commentRss>/businessiswar/?feed=rss2&#038;p=19</wfw:commentRss>
 		<slash:comments>0</slash:comments>
 		</item>
 		<item>
 		<title>Atari Corp. &#8211; Business Is War Book Site launched</title>
-		<link>http://ataribook.com/book/businessiswar/?p=6</link>
-		<comments>http://ataribook.com/book/businessiswar/?p=6#comments</comments>
+		<link>/businessiswar/?p=6</link>
+		<comments>/businessiswar/?p=6#comments</comments>
 		<pubDate>Wed, 02 Jul 2014 03:12:09 +0000</pubDate>
 		<dc:creator><![CDATA[syzygypress]]></dc:creator>
 				<category><![CDATA[Blog]]></category>
 
 		<guid isPermaLink="false">http://atarihq.com/book/businessiswar/?p=6</guid>
 		<description><![CDATA[<p>We launched our new area of the site for Atari Corp. &#8211; Business Is War!</p>
-<p>The post <a rel="nofollow" href="http://ataribook.com/book/businessiswar/?p=6">Atari Corp. &#8211; Business Is War Book Site launched</a> appeared first on <a rel="nofollow" href="http://ataribook.com/book/businessiswar">Atari Corp. - Business Is War</a>.</p>
+<p>The post <a rel="nofollow" href="/businessiswar/?p=6">Atari Corp. &#8211; Business Is War Book Site launched</a> appeared first on <a rel="nofollow" href="/businessiswar">Atari Corp. - Business Is War</a>.</p>
 ]]></description>
 				<content:encoded><![CDATA[<p>We launched our new area of the site for Atari Corp. &#8211; Business Is War!</p>
-<p>The post <a rel="nofollow" href="http://ataribook.com/book/businessiswar/?p=6">Atari Corp. &#8211; Business Is War Book Site launched</a> appeared first on <a rel="nofollow" href="http://ataribook.com/book/businessiswar">Atari Corp. - Business Is War</a>.</p>
+<p>The post <a rel="nofollow" href="/businessiswar/?p=6">Atari Corp. &#8211; Business Is War Book Site launched</a> appeared first on <a rel="nofollow" href="/businessiswar">Atari Corp. - Business Is War</a>.</p>
 ]]></content:encoded>
-			<wfw:commentRss>http://ataribook.com/book/businessiswar/?feed=rss2&#038;p=6</wfw:commentRss>
+			<wfw:commentRss>/businessiswar/?feed=rss2&#038;p=6</wfw:commentRss>
 		<slash:comments>0</slash:comments>
 		</item>
 	</channel>
