--- a/about-the-authors/feed/index.html
+++ b/about-the-authors/feed/index.html
@@ -7,8 +7,8 @@
 	>
 <channel>
 	<title>Comments on: About The Authors</title>
-	<atom:link href="http://ataribook.com/book/about-the-authors/feed/" rel="self" type="application/rss+xml" />
-	<link>http://ataribook.com/book</link>
+	<atom:link href="/about-the-authors/feed/" rel="self" type="application/rss+xml" />
+	<link></link>
 	<description>The true story behind the iconic company, told by the people who were there!</description>
 	<lastBuildDate></lastBuildDate>
 		<sy:updatePeriod>hourly</sy:updatePeriod>
