--- a/etalamogordo-atari-dump-interview-with-co-author-curt-vendel-on-mclean-in-the-morning/feed/index.html
+++ b/etalamogordo-atari-dump-interview-with-co-author-curt-vendel-on-mclean-in-the-morning/feed/index.html
@@ -7,8 +7,8 @@
 	>
 <channel>
 	<title>Comments on: ET/Alamogordo Atari Dump interview with Co-Author Curt Vendel on McLean in the Morning</title>
-	<atom:link href="http://ataribook.com/book/etalamogordo-atari-dump-interview-with-co-author-curt-vendel-on-mclean-in-the-morning/feed/" rel="self" type="application/rss+xml" />
-	<link>http://ataribook.com/book</link>
+	<atom:link href="/etalamogordo-atari-dump-interview-with-co-author-curt-vendel-on-mclean-in-the-morning/feed/" rel="self" type="application/rss+xml" />
+	<link></link>
 	<description>The true story behind the iconic company, told by the people who were there!</description>
 	<lastBuildDate></lastBuildDate>
 	<sy:updatePeriod>hourly</sy:updatePeriod>
