--- a/excerpt/feed/index.html
+++ b/excerpt/feed/index.html
@@ -7,8 +7,8 @@
 	>
 <channel>
 	<title>Comments on: Excerpt</title>
-	<atom:link href="http://ataribook.com/book/excerpt/feed/" rel="self" type="application/rss+xml" />
-	<link>http://ataribook.com/book</link>
+	<atom:link href="/excerpt/feed/" rel="self" type="application/rss+xml" />
+	<link></link>
 	<description>The true story behind the iconic company, told by the people who were there!</description>
 	<lastBuildDate></lastBuildDate>
 	<sy:updatePeriod>hourly</sy:updatePeriod>
