--- a/learn-why-business-is-fun/feed/index.html
+++ b/learn-why-business-is-fun/feed/index.html
@@ -7,8 +7,8 @@
 	>
 <channel>
 	<title>Comments on: Learn Why Business Is Fun</title>
-	<atom:link href="http://ataribook.com/book/learn-why-business-is-fun/feed/" rel="self" type="application/rss+xml" />
-	<link>http://ataribook.com/book</link>
+	<atom:link href="/learn-why-business-is-fun/feed/" rel="self" type="application/rss+xml" />
+	<link></link>
 	<description>The true story behind the iconic company, told by the people who were there!</description>
 	<lastBuildDate></lastBuildDate>
 	<sy:updatePeriod>hourly</sy:updatePeriod>
