--- a/reviews/feed/index.html
+++ b/reviews/feed/index.html
@@ -6,8 +6,8 @@
 		>
 <channel>
 	<title>Comments on: Reviews</title>
-	<atom:link href="http://ataribook.com/book/reviews/feed/" rel="self" type="application/rss+xml" />
-	<link>http://ataribook.com/book</link>
+	<atom:link href="/reviews/feed/" rel="self" type="application/rss+xml" />
+	<link></link>
 	<description>The true story behind the iconic company, told by the people who were there!</description>
 	<lastBuildDate></lastBuildDate>
 	<sy:updatePeriod>hourly</sy:updatePeriod>
