--- a/businessiswar/?feed=rss2&cat=2/index.html
+++ b/businessiswar/?feed=rss2&cat=2/index.html
@@ -26,7 +26,7 @@
 		<dc:creator><![CDATA[syzygypress]]></dc:creator>
 				<category><![CDATA[Blog]]></category>
 
-		<guid isPermaLink="false">http://atarihq.com/book/businessiswar/?p=19</guid>
+		<guid isPermaLink="false">businessiswar/?p=19</guid>
 		<description><![CDATA[<p>New York, New York &#8211; July 2, 2014 &#8212; 1984 was a tumultuous time in the home video game industry. Crashing spectacularly, video game titan Atari Inc. was split up by parent Warner Communications on July 2,1984 with it&#8217;s brand name and half the company sold to Commodore International founder Jack Tramiel. Recently ousted from [&#8230;]</p>
 <p>The post <a rel="nofollow" href="/businessiswar/?p=19">Atari Inc. &#8211; Business Is War Cover Released</a> appeared first on <a rel="nofollow" href="/businessiswar">Atari Corp. - Business Is War</a>.</p>
 ]]></description>
@@ -48,7 +48,7 @@ Goldberg. &#8220;The iconic Jack Tramiel and his sons Sam, Leonard and Gary surr
 		<dc:creator><![CDATA[syzygypress]]></dc:creator>
 				<category><![CDATA[Blog]]></category>
 
-		<guid isPermaLink="false">http://atarihq.com/book/businessiswar/?p=6</guid>
+		<guid isPermaLink="false">businessiswar/?p=6</guid>
 		<description><![CDATA[<p>We launched our new area of the site for Atari Corp. &#8211; Business Is War!</p>
 <p>The post <a rel="nofollow" href="/businessiswar/?p=6">Atari Corp. &#8211; Business Is War Book Site launched</a> appeared first on <a rel="nofollow" href="/businessiswar">Atari Corp. - Business Is War</a>.</p>
 ]]></description>
